tests/integration/snapshots/integration__completion__latex__citation_after.snap
---
source: tests/integration/completion.rs
expression: "complete_and_resolve(&server, tex_uri, 3, 7)?"

---
{
  "isIncomplete": false,
  "items": []
}
