tests/integration/snapshots/integration__completion__latex__citation_multi_word.snap
---
source: tests/integration/completion.rs
expression: "complete_and_resolve(&server, tex_uri, 3, 6)?"

---
{
  "isIncomplete": false,
  "items": [
    {
      "label": "foo 2019",
      "kind": 1,
      "documentation": {
        "kind": "markdown",
        "value": "Bar, F. (2019). *Baz Qux*."
      },
      "preselect": false,
      "sortText": "00 foo 2019 @articlefoo 2019 author Foo Bar title Baz Qux year 2019",
      "filterText": "foo 2019 @articlefoo 2019 author Foo Bar title Baz Qux year 2019",
      "textEdit": {
        "range": {
          "start": {
            "line": 3,
            "character": 6
          },
          "end": {
            "line": 3,
            "character": 11
          }
        },
        "newText": "foo 2019"
      }
    }
  ]
}
