tests/integration/snapshots/integration__completion__latex__citation_valid.snap
---
source: tests/integration/completion.rs
expression: "complete_and_resolve(&server, tex_uri, 3, 6)?"

---
{
  "isIncomplete": false,
  "items": [
    {
      "label": "foo:2019",
      "kind": 1,
      "documentation": {
        "kind": "markdown",
        "value": "Bar, F. (2019). *Baz Qux*."
      },
      "preselect": false,
      "sortText": "00 foo:2019 @articlefoo:2019 author Foo Bar title Baz Qux year 2019",
      "filterText": "foo:2019 @articlefoo:2019 author Foo Bar title Baz Qux year 2019",
      "textEdit": {
        "range": {
          "start": {
            "line": 3,
            "character": 6
          },
          "end": {
            "line": 3,
            "character": 6
          }
        },
        "newText": "foo:2019"
      },
      "data": {
        "citation": {
          "key": "foo:2019",
          "uri": "file:///C:/Users/Paddy/AppData/Local/Temp/.tmpYceZfP/main.bib"
        }
      }
    },
    {
      "label": "bar:2005",
      "kind": 1,
      "preselect": false,
      "sortText": "01 bar:2005 @articlebar:2005",
      "filterText": "bar:2005 @articlebar:2005",
      "textEdit": {
        "range": {
          "start": {
            "line": 3,
            "character": 6
          },
          "end": {
            "line": 3,
            "character": 6
          }
        },
        "newText": "bar:2005"
      },
      "data": {
        "citation": {
          "key": "bar:2005",
          "uri": "file:///C:/Users/Paddy/AppData/Local/Temp/.tmpYceZfP/main.bib"
        }
      }
    }
  ]
}
