tests/integration/snapshots/integration__completion__latex__class_command.snap
---
source: tests/integration/completion.rs
expression: "complete_and_resolve(&server, uri, 2, 5)?"

---
{
  "isIncomplete": false,
  "items": [
    {
      "label": "chaptername",
      "kind": 1,
      "detail": "book.cls",
      "preselect": false,
      "sortText": "00",
      "textEdit": {
        "range": {
          "start": {
            "line": 2,
            "character": 1
          },
          "end": {
            "line": 2,
            "character": 5
          }
        },
        "newText": "chaptername"
      }
    },
    {
      "label": "chaptermark",
      "kind": 1,
      "detail": "book.cls",
      "preselect": false,
      "sortText": "01",
      "textEdit": {
        "range": {
          "start": {
            "line": 2,
            "character": 1
          },
          "end": {
            "line": 2,
            "character": 5
          }
        },
        "newText": "chaptermark"
      }
    },
    {
      "label": "chapter",
      "kind": 1,
      "detail": "book.cls",
      "preselect": false,
      "sortText": "02",
      "textEdit": {
        "range": {
          "start": {
            "line": 2,
            "character": 1
          },
          "end": {
            "line": 2,
            "character": 5
          }
        },
        "newText": "chapter"
      }
    },
    {
      "label": "thechapter",
      "kind": 1,
      "detail": "book.cls",
      "preselect": false,
      "sortText": "03",
      "textEdit": {
        "range": {
          "start": {
            "line": 2,
            "character": 1
          },
          "end": {
            "line": 2,
            "character": 5
          }
        },
        "newText": "thechapter"
      }
    },
    {
      "label": "scshape",
      "kind": 1,
      "detail": "built-in",
      "preselect": false,
      "sortText": "04",
      "textEdit": {
        "range": {
          "start": {
            "line": 2,
            "character": 1
          },
          "end": {
            "line": 2,
            "character": 5
          }
        },
        "newText": "scshape"
      }
    },
    {
      "label": "fontchardp",
      "kind": 1,
      "detail": "amsmath.sty",
      "preselect": false,
      "sortText": "05",
      "textEdit": {
        "range": {
          "start": {
            "line": 2,
            "character": 1
          },
          "end": {
            "line": 2,
            "character": 5
          }
        },
        "newText": "fontchardp"
      }
    },
    {
      "label": "XeTeXcharglyph",
      "kind": 1,
      "detail": "built-in",
      "preselect": false,
      "sortText": "06",
      "textEdit": {
        "range": {
          "start": {
            "line": 2,
            "character": 1
          },
          "end": {
            "line": 2,
            "character": 5
          }
        },
        "newText": "XeTeXcharglyph"
      }
    }
  ]
}
