tests/integration/snapshots/integration__completion__latex__class_environment.snap
---
source: tests/integration/completion.rs
expression: "complete_and_resolve(&server, uri, 4, 13)?"

---
{
  "isIncomplete": false,
  "items": [
    {
      "label": "theindex",
      "kind": 1,
      "detail": "book.cls",
      "preselect": false,
      "sortText": "00",
      "textEdit": {
        "range": {
          "start": {
            "line": 4,
            "character": 7
          },
          "end": {
            "line": 4,
            "character": 13
          }
        },
        "newText": "theindex"
      }
    }
  ]
}
