tests/integration/snapshots/integration__completion__latex__color_model_define_color.snap
---
source: tests/integration/completion.rs
expression: "complete_and_resolve(&server, uri, 1, 18)?"

---
{
  "isIncomplete": false,
  "items": [
    {
      "label": "gray",
      "kind": 1,
      "preselect": false,
      "sortText": "00",
      "textEdit": {
        "range": {
          "start": {
            "line": 1,
            "character": 18
          },
          "end": {
            "line": 1,
            "character": 18
          }
        },
        "newText": "gray"
      }
    },
    {
      "label": "rgb",
      "kind": 1,
      "preselect": false,
      "sortText": "01",
      "textEdit": {
        "range": {
          "start": {
            "line": 1,
            "character": 18
          },
          "end": {
            "line": 1,
            "character": 18
          }
        },
        "newText": "rgb"
      }
    },
    {
      "label": "RGB",
      "kind": 1,
      "preselect": false,
      "sortText": "02",
      "textEdit": {
        "range": {
          "start": {
            "line": 1,
            "character": 18
          },
          "end": {
            "line": 1,
            "character": 18
          }
        },
        "newText": "RGB"
      }
    },
    {
      "label": "HTML",
      "kind": 1,
      "preselect": false,
      "sortText": "03",
      "textEdit": {
        "range": {
          "start": {
            "line": 1,
            "character": 18
          },
          "end": {
            "line": 1,
            "character": 18
          }
        },
        "newText": "HTML"
      }
    },
    {
      "label": "cmyk",
      "kind": 1,
      "preselect": false,
      "sortText": "04",
      "textEdit": {
        "range": {
          "start": {
            "line": 1,
            "character": 18
          },
          "end": {
            "line": 1,
            "character": 18
          }
        },
        "newText": "cmyk"
      }
    }
  ]
}
