tests/integration/snapshots/integration__completion__latex__color_model_define_color_set.snap
---
source: tests/integration/completion.rs
expression: "complete_and_resolve(&server, uri, 2, 17)?"

---
{
  "isIncomplete": false,
  "items": [
    {
      "label": "RGB",
      "kind": 1,
      "preselect": false,
      "sortText": "00",
      "textEdit": {
        "range": {
          "start": {
            "line": 2,
            "character": 16
          },
          "end": {
            "line": 2,
            "character": 17
          }
        },
        "newText": "RGB"
      }
    },
    {
      "label": "rgb",
      "kind": 1,
      "preselect": false,
      "sortText": "01",
      "textEdit": {
        "range": {
          "start": {
            "line": 2,
            "character": 16
          },
          "end": {
            "line": 2,
            "character": 17
          }
        },
        "newText": "rgb"
      }
    },
    {
      "label": "gray",
      "kind": 1,
      "preselect": false,
      "sortText": "02",
      "textEdit": {
        "range": {
          "start": {
            "line": 2,
            "character": 16
          },
          "end": {
            "line": 2,
            "character": 17
          }
        },
        "newText": "gray"
      }
    }
  ]
}
