tests/integration/snapshots/integration__completion__latex__include_relative_bibliography.snap
---
source: tests/integration/completion.rs
expression: "complete_and_resolve(&server, uri, 4, 16)?"

---
{
  "isIncomplete": false,
  "items": [
    {
      "label": "foo.bib",
      "kind": 1,
      "preselect": false,
      "sortText": "00",
      "textEdit": {
        "range": {
          "start": {
            "line": 4,
            "character": 16
          },
          "end": {
            "line": 4,
            "character": 16
          }
        },
        "newText": "foo.bib"
      }
    },
    {
      "label": "qux",
      "kind": 1,
      "preselect": false,
      "sortText": "01",
      "textEdit": {
        "range": {
          "start": {
            "line": 4,
            "character": 16
          },
          "end": {
            "line": 4,
            "character": 16
          }
        },
        "newText": "qux"
      }
    }
  ]
}
