tests/integration/snapshots/integration__completion__latex__include_relative_parent_dir.snap
---
source: tests/integration/completion.rs
expression: "complete_and_resolve(&server, uri, 0, 10)?"

---
{
  "isIncomplete": false,
  "items": [
    {
      "label": "bar.tex",
      "kind": 1,
      "preselect": false,
      "sortText": "00",
      "textEdit": {
        "range": {
          "start": {
            "line": 0,
            "character": 10
          },
          "end": {
            "line": 0,
            "character": 10
          }
        },
        "newText": "bar.tex"
      }
    },
    {
      "label": "main.tex",
      "kind": 1,
      "preselect": false,
      "sortText": "01",
      "textEdit": {
        "range": {
          "start": {
            "line": 0,
            "character": 10
          },
          "end": {
            "line": 0,
            "character": 10
          }
        },
        "newText": "main.tex"
      }
    },
    {
      "label": "qux",
      "kind": 1,
      "preselect": false,
      "sortText": "02",
      "textEdit": {
        "range": {
          "start": {
            "line": 0,
            "character": 10
          },
          "end": {
            "line": 0,
            "character": 10
          }
        },
        "newText": "qux"
      }
    }
  ]
}
